# golibjpeg

./: .gitignore  .gitmodules  Makefile  README.md  colour.go  decode.go  format.go  go.mod  golibjpeg.go  golibjpeg_test.go  image.go  pixeldata.go  reference_compliance_test.go  reference_dcm_compliance_test.go  reference_test.go  stream.go
.github/actions/build-native/: action.yml
.github/workflows/: build-libs.yml  build.yml
_csrc/: CMakeLists.txt  build.sh  build_x64.bat  build_x86.bat
_csrc/golibjpeg/: golibjpeg.cpp  golibjpeg.h
_csrc/libjpeg/: README  README.history  config.h
_csrc/libjpeg/marker/: exifmarker.cpp  jfifmarker.cpp
internal/testdata/: dcm.go  testdata.go
lib/: CMakeLists.txt  README.md
lib/capi/: golibjpeg.cpp  golibjpeg.h
native/: bridges.go  errors.go  native.go  native_darwin_amd64.go  native_darwin_arm64.go  native_linux_amd64.go  native_linux_arm64.go  native_windows_386.go  native_windows_amd64.go  status.go
native/libs/: golibjpeg_darwin_arm64.dylib
scripts/: fetch-testdata.sh
testdata/: README.md
